samples/_failures_safe/1761458041_46dc51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c307ed6.c: In function ‘main’:
./samples/SAFE/__tmp_4c307ed6.c:166:9: error: expected expression at end of input
  166 |         {1,
      |         ^
./samples/SAFE/__tmp_4c307ed6.c:166:9: error: expected declaration or statement at end of input
